[package]
name = "cia-backend"
version = "0.1.0"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "~0.9"
scraper = "~0.11"
cssparser = "~0.25"
chrono = "~0.4"
regex = "1"
